rudimentärt stöd för tävling mot inspelad löpning
git-svn-id: svn://acro.nym.se/projekt@193 2a83244e-8797-45b3-a2fb-03eebcce663c

--- a/iPhone/Glint/trunk/sv.lproj/Localizable.strings
+++ b/iPhone/Glint/trunk/sv.lproj/Localizable.strings
@@ -40,6 +40,8 @@
 "avg speed" = "genomsn. hast.";
 "measurements" = "mätningar";
 "per" = "per";
+"dist diff" = "distansskillnad";
+"time diff" = "tidsskillnad";
 
 "Files" = "Filer";
 "Record" = "Spela in";
@@ -62,3 +64,5 @@
 "Last Week" = "Förra veckan";
 "This Month" = "Denna månad";
 "Earlier" = "Tidigare";
+"Email" = "Eposta";
+"Race against" = "Tävla mot";
