race seems to work, and is saved in preferences
git-svn-id: svn://acro.nym.se/projekt@198 2a83244e-8797-45b3-a2fb-03eebcce663c

--- a/iPhone/Glint/trunk/sv.lproj/Localizable.strings
+++ b/iPhone/Glint/trunk/sv.lproj/Localizable.strings
@@ -45,8 +45,9 @@
 
 "Files" = "Filer";
 "Record" = "Spela in";
-"Stop Recording" = "Stanna inspelning";
+"End Recording" = "Stanna inspelning";
 "Unlock" = "Lås upp";
+"End Race" = "Avsluta Tävling";
 
 /*
 ** Misc
