default.png and better racing
git-svn-id: svn://acro.nym.se/projekt@199 2a83244e-8797-45b3-a2fb-03eebcce663c

--- a/iPhone/Glint/trunk/sv.lproj/Localizable.strings
+++ b/iPhone/Glint/trunk/sv.lproj/Localizable.strings
@@ -45,9 +45,9 @@
 
 "Files" = "Filer";
 "Record" = "Spela in";
-"End Recording" = "Stanna inspelning";
+"End Recording" = "Bryt inspeln.";
 "Unlock" = "Lås upp";
-"End Race" = "Avsluta Tävling";
+"End Race" = "Bryt tävl.";
 
 /*
 ** Misc
