--- a/iPhone/Glint/trunk/sv.lproj/Localizable.strings
+++ b/iPhone/Glint/trunk/sv.lproj/Localizable.strings
@@ -64,6 +64,7 @@
 "Yesterday" = "Igår";
 "This Week" = "Denna vecka";
 "Last Week" = "Förra veckan";
+"Two Weeks Ago" = "Två veckor sedan";
 "This Month" = "Denna månad";
 "Earlier" = "Tidigare";
 "Email" = "Eposta";
