Better section handling when removing files.
git-svn-id: svn://acro.nym.se/projekt@249 2a83244e-8797-45b3-a2fb-03eebcce663c

--- a/iPhone/Glint/trunk/sv.lproj/Localizable.strings
+++ b/iPhone/Glint/trunk/sv.lproj/Localizable.strings
@@ -80,6 +80,7 @@
 "Race against" = "Tävla mot";
 "Files" = "Filer";
 "points" = "mätpunkter";
+"There are currently no saved files. To use saved files, first make a recording from the main screen." = "Det finns inga sparade filer. För att använda sparade filer, gör först en inspelning från huvudskärmen.";
 
 /*
 ** File Detail screen
