lap times and page headers
git-svn-id: svn://acro.nym.se/projekt@282 2a83244e-8797-45b3-a2fb-03eebcce663c

--- a/iPhone/Glint/trunk/sv.lproj/Localizable.strings
+++ b/iPhone/Glint/trunk/sv.lproj/Localizable.strings
@@ -91,3 +91,10 @@
 "End Time" = "Måltid";
 "Total Distance" = "Total distans";
 "Average Speed" = "Genomsn. hastighet";
+
+/*
+** Lap times screen
+*/
+"Speed & Distance" = "Hastighet & avstånd";
+"Position & Course" = "Position & kurs";
+"Lap Times" = "Varvtider";
